--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 src/main/resources/*.properties
+src/test/resources/*.properties
 src/main/resources/*.yaml
 src/main/resources/*.yml
 
